--- a/harbour-iban-check.desktop
+++ b/harbour-iban-check.desktop
@@ -3,10 +3,10 @@ Type=Application
 X-Nemo-Application-Type=silica-qt5
 Icon=harbour-iban-check
 Exec=harbour-iban-check
-Name=IBAN Check
+Name=IBAN Checker
 # translation example:
 # your app name in German locale (de)
 #
 # Remember to comment out the following line, if you do not want to use
 # a different app name in German locale (de).
-Name[de]=IBAN-Check
+Name[de]=IBAN-Checker
